# Project

./: .gitignore  BACKEND_SETUP.md  README.md  RUN_APP.md  Script_Presentation.docx  baselines.py  btc_full_onchain.csv  btc_pipeline.py  btc_test.csv  btc_train.csv  btc_val.csv  chatwithagent.txt  code_deep_dive.md  dual_head_transformer.py  evaluate.py  expand_features.py  feature_categories.json  feature_selection.py  hyper_cnn_lstm.py  launch_neuraledge.sh  launch_production.sh  lstm_model.py  main.py  pipeline.py  precheck.py  presentation_guide.md  pyproject.toml  run.md  showcase_app_handoff.md  test_overlap.py  things to  do.docx  transformer_model.py  when to retraion the model.docx  ~$en to retraion the model.docx  ~$ings to  do.docx  ~$ript_Presentation.docx
BTC_Price_in_2026/: model2_pipeline.py  ohlcv_2010_to_now.csv
Backend/: RUN_FIRST.txt  SENTIMENT_GUIDE.md  collect_sentiment_simple.py  dip_analysis_2026.py  run_full_pipeline.py
Brain_Model_57/: run_prediction.sh
Documentation/: AGENT_HANDOFF.md  NeuralEdge_Master_Documentation.md  agent_handoff_guide.md  presentation_guide.md
Mango/: COMPLETE_GUIDE.md  TRAINING_GUIDE.md  TRAINING_RESULTS.md  btc_8h_sentiment.csv  collect_8h_data.py  compare_daily_vs_8h.py  compare_models.py  merge_all_data.py
NeuralEdge/: RESULTS.md  verify_installation.py
Paper/: Gemini The impact and Predictive Power of On-Chain Data on the Cryptocurrency Price using Transformers (Repaired).docx  Gemini The impact and Predictive Power of On-Chain Data on the Cryptocurrency Price using Transformers.docx  IEEE_Research_Paper.md  (+3 more)
(+254 files in other folders)
